@@ -4,6 +4,8 @@ Thoth History
 Version 0.2.0 (?)
   * Updated to work with bleeding-edge Ramaze (currently 0.3.9.5 in the Ramaze
     Darcs repo).
+  * Added --adapter command line option and server.adapter config option to
+    specify a different Ramaze server adapter to use (the default is Thin).
   * Added --migrate command line option to automatically upgrade or downgrade
     a Thoth database schema.
   * Added site.enable_comments setting. Set this to false if you don't want
